--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mersenne-twister-sudoku-solver"]
-	path = mersenne-twister-sudoku-solver
-	url = https://github.com/tfpf/mersenne-twister-sudoku-solver.git
+[submodule "mersenne-twister"]
+	path = mersenne-twister
+	url = https://github.com/tfpf/mersenne-twister.git
